--- a/src/apps/users/pyproject.toml
+++ b/src/apps/users/pyproject.toml
@@ -8,18 +8,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-alembic = "^1.13.2"
+alembic = "^1.14.1"
 asyncpg = "^0.29.0"
 pydantic-settings = "^2.4.0"
 psycopg2-binary = "^2.9.9"
-bcrypt = "^4.2.0"
+bcrypt = "^4.3.0"
 fastapi = {extras = ["standart"], version = "^0.115.4"}
-uvicorn = "^0.32.0"
+uvicorn = "^0.32.1"
 httpx = "^0.27.2"
 pydantic = {extras = ["email"], version = "^2.9.2"}
 pyyaml = "^6.0.2"
 dishka = "^1.4.2"
-aio-pika = "^9.5.4"
+aio-pika = "^9.5.5"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.test.dependencies]
